--- a/react/search/src/app.scss
+++ b/react/search/src/app.scss
@@ -5,9 +5,12 @@
     box-sizing: border-box;
 }
 .search-wrap {
+  display: flex;
     padding: 10px;
 
     .search-item {
+        width: 0;
+        flex-grow: 1;
         position: relative;
         padding: 5px 10px;
         border: 1px solid #eee;
@@ -24,6 +27,36 @@
             font-size: 18px;
             transform: translate(0,-50%);
         }
+    }
+    .btn-handle {
+        margin-left: 10px;
+        padding: 5px 20px;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        background: #2e7ae6;
+        
+        &:hover {
+            opacity: .7;
+        }
+    }
+}
 
+.content-wrap {
+    padding: 5px;
+
+    dt {
+        padding: 5px 10px;
+    }
+    dd {
+        padding: 5px 10px;
+        display: flex;
+        flex-wrap: wrap;
+        word-wrap: break-word;
+
+        & > p {
+            padding: 5px;
+            color: #999;
+        }
     }
 }
